2004-02-29  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua-admin.in : add moduser command that changes password.
	* src/kahua/developer.scm :
	(developer-password-set!): bug fixed.
	(developer-roles-set!): added.
	(find-developer): user does not found, raise error.
	(kahua-change-developer-password): removed old-password argument
	and added validation for new-password.

2004-02-28  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm :
	(kahua-persistent-classes-in-db):
	(kahua-persistent-class-generation):
	(kahua-persistent-class-definition): added metalevel API.
	(translate-up, translate-down): fixed a bug that caused an error
	when upgrading databases created by older kahua.persistence.
	(autoloads): make the test pass without dbi.

2004-02-27  Shiro Kawai  <shiro@acm.org>

	* src/kahua/persistence.scm (kahua-object reader): check if the
	generation of instance is newer than currently recorded in-db class
	generation, and if so, re-read metainfo.
	(compute-translation-directive): fixed a bug that the translation
	directive might have been assigned incorrectly.

	* src/kahua/persistence.scm:
	(<kahua-db-dbi> etc): added support of DBI back-end.  Tested with
	mysql.  The back-end database can be specified by "mysql:" or
	"pg:" prefix in the database pathname.  If these paths
	are specified, dbi module is autoloaded, so the caller doesn't
	need to load dbi explicitly.  (And kahua.persistence still works
	without dbi, as far as such pathnames aren't specified).
	The current implementation is a prototype, inefficient and
	not robust.
	* test/persistence.scm : changed a bit so that it can test both
	standard filesystem db and DBI-backed db.
	* test/persistence-dbi.scm : added.  This isn't run by make check,
	for it requires setup on RDBMS side.

2004-02-27  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/sandbox.scm: requires gauche.redefutil module before
	class redefinition.

2004-02-27  Koichi Sasada <sasada@namikilab.tuat.ac.jp>
